--- a/nadi-web/src/pages/index.astro
+++ b/nadi-web/src/pages/index.astro
@@ -4,6 +4,45 @@ import "../styles/index.css";
 import Layout from '../layouts/Layout.astro';
 import SocialLinks from "../components/social/SocialLinks.astro";
 import Formacion from "../components/formacion/Formacion.astro";
+import Papa from "papaparse";
+import jsonfile from "jsonfile";
+
+const mainUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vQ9MAoGS7C6iChQCUYq5x8czgdiANxkNYxTA4iGjiWMIUgz28a8GJEUKbGKwhiB_y-HgJi72EzO0DNK/pub?gid=0&single=true&output=csv";
+// console.log(data);
+async function fecthAndSaveData(){
+    try{
+        const csvData = await fetch(mainUrl).then(res => res.text());
+        const parsedData = Papa.parse(csvData, { header: true });
+        const jsonData = parsedData.data;
+        const rutaJson = 'E:/Repositorios/Astro/nadi-web/src/json/data.json';
+        // const rutaJsonServidor = ;
+        await jsonfile.writeFile(rutaJson, jsonData, { spaces: 2 });
+        fetchAndSaveDataBySheet(jsonData);
+        console.log("Datos guardados en: ", rutaJson);
+    }
+    catch(error){
+        console.error("Error al obtener los datos: ", error);
+    }
+};
+async function fetchAndSaveDataBySheet(jsonData){
+    for(const element of jsonData){
+        if(element.url != '' && element.url != null){
+            const url = element.url;
+            try {
+                const csvData = await fetch(url).then(res => res.text());
+                const parsedData = Papa.parse(csvData, { header: true });
+                const filteredData = parsedData.data.filter(row => Object.values(row).some(value => String(value).trim() !== '')); 
+                const jsonData = parsedData.data;
+                const rutaJson = `E:/Repositorios/Astro/nadi-web/src/json/${element.pestaña}.json`;
+                await jsonfile.writeFile(rutaJson, filteredData, { spaces: 2 });
+                console.log("Datos guardados en: ", rutaJson);
+            } catch (error) {
+                console.error("Error al obtener los datos: ", error);
+            }
+        }
+    }
+};
+fecthAndSaveData();
 ---
 <!-- página principal (home) -->
 <Layout title="Welcome to NadiWeb.">	
