--- a/002-porfolio-nagib/src/components/Projects.astro
+++ b/002-porfolio-nagib/src/components/Projects.astro
@@ -70,9 +70,25 @@ const PROJETS = [
   {
     title: "Tracker de precio de productos",
     description:
-      "Infografía desarrollada para cliente para el seguimiento del precio sobre productos y servicios. Se realiza una llamada para obtener los datos, se filtran, agrupan y realizan los cálculos para generar los gráficos",
+      "Infografía desarrollada para cliente para el seguimiento del precio sobre productos y servicios. Se realiza una llamada para obtener los datos, se filtran, agrupan y realizan los cálculos para generar los gráficos.",
     link: "https://www.rtve.es/noticias/20240215/ipc-lista-compra-chocolate-luz-turismo-mayores-subidas-2024/15949297.shtml",
     image: "img/projects/rtve.webp",
+    tags: [TAGS.PHP,TAGS.JAVASCRIPT, TAGS.CSS, TAGS.HTML, TAGS.JQUERY],
+  },
+  {
+    title: "Infografía para las elecciones Europeas",
+    description:
+      "Después de realizar la llamada a la API correspondiente y obtener los datos, se filtran y agrupan para mostrar los datos solicitados. Una vez obtenidos los datos se genera el HTML necesario para montar la infografía. Además de añadir toda las interacciones e infografías de la barra de navegación.",
+    link: "https://www.rtve.es/noticias/elecciones/europeas/",
+    image: "img/projects/elecciones.webp",
+    tags: [TAGS.PHP,TAGS.JAVASCRIPT, TAGS.CSS, TAGS.HTML, TAGS.JQUERY],
+  },
+  {
+    title: "Infografía para JJOO",
+    description:
+      "Tras obtener los datos de la API de Play, se filtran los datos para obtener los días y los meses del calendario y se genera el HTML. Luego se crean las distintas retransmiciones de programas y comparando las horas se añade información del estado de la emisión en el día pudiendo ser Finalizado, En directo, En XX:XX horas. Se monta el HTML de toda la infografía y se añade el JS necesario para las interacciones de la barra de navegación.",
+    link: "https://www.rtve.es/juegos-olimpicos/calendario-directos/",
+    image: "img/projects/jjoo.webp",
     tags: [TAGS.PHP,TAGS.JAVASCRIPT, TAGS.CSS, TAGS.HTML, TAGS.JQUERY],
   },
   {
