--- a/002-porfolio-nagib/src/pages/index.astro
+++ b/002-porfolio-nagib/src/pages/index.astro
@@ -20,7 +20,7 @@ import Contacto from "../components/Contacto.astro";
 		<SectionContainer class="py-44 pb-20">
 			<img class="rounded-full size-12 mb-4" src="/img/yo.jpg" alt="foto nagib">
 			<h1 class="text-white text-2xl md_text-4xl lg:text-5xl font-bold flex flex-row gap-x-2 pb-6 lg:pb-10">
-				Hey, soy Nagib 
+				Hey!, soy Nagib 
 				<a href="https://www.linkedin.com/in/nagib-delgado-morales-5456101b6/" target="_blank" rel="noopener" class="flex justify-center items-center hover:scale-105 transition">
 					<Badge>Disponible para trabajar</Badge>
 				</a>
