actualizar saludo en la sección "Sobre mi"

--- a/nadi-web/src/pages/aboutMe.astro
+++ b/nadi-web/src/pages/aboutMe.astro
@@ -14,5 +14,5 @@ const experiencia = data.filter(item => item.grupo.toLowerCase() === "experienci
 
 ---
 <Layout title="Sobre mi">
-    
+    <h1>Hola</h1>
 </Layout>
